# cyberfyx-site

./: .gitattributes  .gitignore  .gitingore  .runall.pids  CLAUDE.md  README.md  kill.sh  package.json  render.yaml  runall.sh
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_foundation.py
backend/app/: app_factory.py  main.py  worker.py
backend/app/api/: dependencies.py  router.py
backend/app/api/internal/: auth.py  inquiries.py
backend/app/api/public/: catalog.py  inquiries.py  site.py
backend/app/core/: config.py  database.py  errors.py  security.py
backend/app/db/: seed.py
backend/app/models/: __init__.py  base.py  catalog.py  enums.py  inquiry.py  outbox.py  site.py  staff.py
backend/app/schemas/: __init__.py  auth.py  catalog.py  common.py  inquiry.py  site.py
backend/app/services/: auth.py  catalog.py  inquiry.py  notifications.py  outbox.py  site.py
backend/cyberfyx_backend_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  helpers.py  test_health.py  test_health_and_site.py  test_internal_inquiries.py  test_outbox_worker.py  test_public_inquiries.py  test_security_tokens.py  test_site.py
docs/: BACKEND_INTEGRATION.md  DEPLOYMENT.md  astro-migration-plan.md  backend.md  frontend.md  getting-started.md
frontend-astro/: .env.example  astro.config.mjs  nginx.conf  package-lock.json  package.json  wrangler.jsonc
scripts/: ci-local.sh  install-hooks.sh  start-all.mjs
(+40 files in other folders)
